--- a/gaming_console.ipynb
+++ b/gaming_console.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "source": [
     "## Dataset Overview\n",
-    "Dataset Name: [Video Game Console Generations Dataset on data.world](https://data.world/asci7/video-game-console-generations)\n",
+    "Dataset Name: [Video Game Console Generations Dataset on [data.world](https://data.world/asci7/video-game-console-generations)\n",
     "Columns:\n",
     "- primary_consoles: Name of the gaming console\n",
     "- year_of_release: Year of console release\n",
