--- a/gaming_console.ipynb
+++ b/gaming_console.ipynb
@@ -764,7 +764,7 @@
    "source": [
     "# Plot market share trends\n",
     "plt.figure(figsize=(14, 5))\n",
-    "custom_palette = sns.color_palette(\"pastel\", n_colors=len(df['manufacturers'].unique()))\n",
+    "custom_palette = sns.color_palette(\"muted\", n_colors=len(df['manufacturers'].unique()))\n",
     "sns.lineplot(x='release_year', y='market_share', hue='manufacturers', data=market_share_df, palette=custom_palette)\n",
     "plt.title('Market Share Trends by Manufacturer Over Time')\n",
     "plt.ylabel('Market Share (%)')\n",
