--- a/gaming_console.ipynb
+++ b/gaming_console.ipynb
@@ -54,7 +54,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Data Cleaning\n",
+    "## Data Cleaning and Manupulation\n",
     "#### Loading the Dataset\n",
     "First, we load the gaming console dataset into a Pandas DataFrame named df and then use the info() method to get basic information about the dataset, including the data types and the presence of missing values."
    ],
